--- a/exercice1.html
+++ b/exercice1.html
@@ -7,6 +7,7 @@
 <body>
 
     <button id="stop-button" type="button">Stop</button>
+    <button id="play" type="button">Démarer le chrono</button>
     <p>
         <span id="seconds">0</span> seconds have gone by!
     </p>
